--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "firebase-admin": "^10.2.0"
+    "firebase-admin": "^10.2.0",
+    "splitwise": "^1.0.0"
   }
 }
